muffin-external-access/templates/61-destinationrule-external-postgres.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: external-postgres-dr
spec:
  host: db.example.com
  trafficPolicy:
    tls:
      mode: DISABLE
